# nsEVDx

./: .coverage  .coverage.HCOE-12HQ9R3.pid179948.XQtmleOx.HKi4KWy4V10h  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pydoc-markdown.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  draft-pdf.yml  release.yml  test.yml
API_docs/: API.md  index.md  usage.md
Paper/: paper.bib  paper.md
docs/: API.md  CNAME  index.html  index.md  installation.md  styles2.css  usage.md
docs/source/: Examples1.rst  citations_and_refs.rst  conf.py  index.rst  installation.rst  modules.rst  nsEVDx.rst  overview.rst  quickstart.rst  theory.rst
docs/web/: del.html  index.html  nsEVDx.code-workspace
examples/: L-moments_and_GPD_pars.ipynb  Lmoments_and_GPD_pars.ipynb  Quick_start_example.ipynb  example_GEV.ipynb  example_GPD_frequentist.ipynb  example_bayesian_metrics.ipynb  example_generating_rv_from_nsEVD.ipynb  utility examples.ipynb
examples/.ipynb_checkpoints/: example_GEV-checkpoint.ipynb  example_GPD_frequentist-checkpoint.ipynb  example_generating_rv_from_nsEVD-checkpoint.ipynb  station_metadata-checkpoint.json
examples/data/: Annual_maxima_series.csv  Partial_duration_series.csv  temp_anomaly_&_NAO.csv
nsEVDx/: __init__.py  evd_model.py  hmc_engine.py  utils.py
nsEVDx.egg-info/: PKG-INFO
tests/: test_evd_model.py  test_hmc_engine.py  test_utils.py
