[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nsEVDx"
version = "0.1.1"
description = "Modeling Nonstationary Extreme Value Distributions"
authors = [
  { name="Nischal Kafle", email="nkafle.29@gmail.com" },
  { name = "Claudio Meier", email = "cimeier@memphis.edu" }
]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "seaborn",
  "tqdm"
  ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["Bayesian inference", "Frequentist", "Generalised extreme value", "Generalised pareto", "Frequency analyses","Hydroclimatology"]

classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology"
]

[project.urls]
Homepage = "https://nischalcs50.github.io/nsEVDx/"
Repository = "https://github.com/Nischalcs50/nsEVDx"
Documentation = "https://github.com/Nischalcs50/nsEVDx/API_docs"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black"
]

[tool.ruff]
line-length = 88
exclude = ["test_file.py","test_nsevdx_full.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Error, Flake8, Warnings, Isort

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nsEVDx --cov-report=term-missing"
